# resonance-lattice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/skills/deep-research/: SKILL.md  evals.json
.claude/skills/rlat/: SKILL.md  evals.json
.claude/skills/rlat-build-on-kaggle/: SKILL.md
.claude/skills/rlat-build-on-kaggle/scripts/: build_corpora_batch.py  build_corpus.py  kernel-metadata.json
.claude/skills/rlat/hooks/: _hookutil.py  memory-session-end.py  session-start.py  settings.example.json
.claude/skills/rlat/references/: CLI_REFERENCE.md  FAQ.md  PLAYBOOK.md  RECIPES.md
.claude/skills/rlat/scripts/: rebuild-and-prime.sh  search-then-inject.sh
benchmarks/results/optimised/: beir_fiqa_probe_v1.json
benchmarks/results/user_bench/: build_query_speed.json  hallucination_fabric_11lane.json  hallucination_fabric_11lane_relaxed.json  primer_effectiveness.json  token_usage_v2.json
benchmarks/user_bench/build_query_speed/: run.py
benchmarks/user_bench/hallucination/: analyze_fabric.py  fabric_tasks.jsonl  judge_only.py  rejudge_relaxed.py  run.py  tasks.jsonl
benchmarks/user_bench/primer_effectiveness/: run.py  tasks.jsonl
benchmarks/user_bench/primer_effectiveness/fixtures/: memory_primer.md
benchmarks/user_bench/primer_effectiveness/fixtures/memory/: semantic.jsonl  semantic.npy  working.npy
benchmarks/user_bench/token_usage/: run.py  tasks.jsonl
docs/: BENCHMARKS.md  CORE_FEATURES.md  ENCODER_CHOICE.md  FAQ.md  GETTING_STARTED.md  HONEST_CLAIMS.md  STORAGE_MODES.md  VISION.md
docs/internal/: ARCHITECTURE.md  BENCHMARK_GATE.md  FIELD.md  HONEST_CLAIMS.md  KNOWLEDGE_MODEL_FORMAT.md  MEMORY.md  OPTIMISE.md  RQL.md  SKILL_INTEGRATION.md  STORE.md
docs/internal/benchmarks/: 00_audit.md  01_token_usage.md  02_distractor_floor_analysis.md  02_fabric_failure_analysis.md  02_hallucination.md  03_memory_full_stack.md  04_skill_integration.md  05_primer_effectiveness.md  06_build_query_speed.md  07_optimise_beir_fiqa.md
docs/user/: API_KEYS.md  BENCHMARKS.md  CLI.md  CORE_FEATURES.md  ENCODER.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  OPTIMISE.md  SKILLS.md  STORAGE_MODES.md
src/resonance_lattice/: __init__.py  _paths.py  _pricing.py  cli.py  config.py  lattice.py  refresh.py  store.py
src/resonance_lattice/cli/: __init__.py  _grounding.py  _load.py  _namecheck.py  app.py  build.py  compare.py  convert.py  deep_search.py  init.py  install_encoder.py  maintain.py  memory.py  optimise.py  profile.py  search.py  skill_context.py  summary.py  watch.py
src/resonance_lattice/deep_search/: __init__.py  loop.py  prompts.py  types.py
src/resonance_lattice/field/: __init__.py  _runtime_common.py  algebra.py  ann.py  dense.py  encoder.py  onnx_runtime.py  openvino_runtime.py  text.py  torch_runtime.py
src/resonance_lattice/install/: __init__.py  encoder.py
src/resonance_lattice/intent/: __init__.py  kind.py
src/resonance_lattice/memory/: __init__.py  _common.py  capture.py  consolidation.py  daemon.py  distil.py  layered.py  migrate.py  primer.py  recall.py  redaction.py  retention.py  store.py  train.py  user_prompt.py
src/resonance_lattice/memory/prompts/: distil.md
src/resonance_lattice/optimise/: __init__.py  device.py  mine_negatives.py  synth_queries.py  train_mrl.py  write_slot.py
src/resonance_lattice/remote/: github.py
src/resonance_lattice/rql/: __init__.py  compare.py  compose.py  experimental.py  inspect.py  navigate.py  types.py
src/resonance_lattice/store/: __init__.py  archive.py  bands.py  base.py  bundled.py  chunker.py  conversion.py  incremental.py  local.py  metadata.py  registry.py  remote.py  remote_index.py  verified.py
tests/: conftest.py
tests/harness/: __init__.py  _testutil.py  band_parity.py  benchmark_gate.py  conversion.py  deep_search.py  doc_examples.py  drift.py  encoder_determinism.py  golden.py  incremental_refresh.py  incremental_sync.py  memory_cycle.py  memory_v21_corroborate.py  memory_v21_daemon.py  memory_v21_distil.py  memory_v21_hook.py  memory_v21_hook_inject.py  memory_v21_privacy.py  memory_v21_prompt_golden.py  memory_v21_recall.py  memory_v21_retention.py  memory_v21_schema_compat.py  memory_v21_workspace_scope.py  name_check.py  optimise_roundtrip.py  optimised_reproject.py  parity.py  property.py  roundtrip.py  runner.py  runtime_parity.py  skill_context.py  watch_loop.py
tests/harness/_fixtures/: distil_golden.json  workspace_collision.json
tests/harness/fixtures/: README.md
tests/harness/fixtures_large/: README.md
