[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlat"
version = "2.1.0a1"
description = "Knowledge-model retrieval for AI assistants — base-first, dense-only, three storage modes"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.12"
authors = [
    {name = "Kane Snyder"},
]
keywords = ["retrieval", "ai-assistants", "context-injection", "knowledge-model", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# v2.0 minimum install (CPU-primary read path: search / profile / serve / compare on
# pre-built knowledge models). No torch, no transformers, no LLM SDK at base.
# `tokenizers` ships at base because the read path needs to tokenize queries
# (huggingface_hub can download but not encode text). OpenVINO is optional and
# auto-detected on Intel CPUs (install separately).
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "zstandard>=0.22",
    "huggingface_hub>=0.20",
    "tokenizers>=0.15",
    "onnxruntime>=1.17",
    "portalocker>=2.8",
]

[project.optional-dependencies]
# Encoder building (rlat build): downloads HF weights, encodes passages.
# transformers >=4.48 is required: gte-modernbert-base has model_type
# "modernbert", which only landed in transformers 4.48.0.
# onnxscript is a transitive runtime dep of torch.onnx.export at opset ≥ 17
# — torch doesn't pull it automatically but install_encoder._export_onnx
# fails ModuleNotFoundError without it (e.g. on Kaggle's torch image).
build = [
    "transformers>=4.48",
    "torch>=2.0",
    "onnxscript>=0.1",
]
# MRL optimised training (rlat optimise): synth queries + InfoNCE
optimise = [
    "anthropic>=0.25",
    "torch>=2.0",
]
# ANN indexing (rlat build for corpora with N > 5000 passages, all queries
# against indexed knowledge models). FAISS locked at Audit 04 (Phase 1 #14):
# hnswlib failed the audit's tertiary cross-platform-wheel gate (no Win+py3.12
# wheel); FAISS has prebuilt wheels everywhere; ScaNN is Linux/macOS only.
# Evidence: docs/internal/audits/03_format_ann_chunking.md +
# benchmarks/results/ann_audit_04.json.
ann = [
    "faiss-cpu>=1.13",
]
# CUDA / GPU acceleration. Torch comes via [build] or [optimise]; this extra
# only adds the GPU-specific ONNX runtime, so users compose [build,gpu] or
# [optimise,gpu] as needed.
#
# IMPORTANT: `onnxruntime` (CPU, base dep) and `onnxruntime-gpu` (here) provide
# the same `onnxruntime` Python package and clobber each other. Users wanting
# CUDA inference must `pip uninstall onnxruntime` before installing this extra,
# OR install with `--no-deps onnxruntime-gpu`. We keep `[gpu]` out of `[all]`
# below so the default convenience install never triggers the clash.
gpu = [
    "onnxruntime-gpu>=1.17",
]
# BEIR / benchmarking harness, plus the user-facing comparison suite at
# benchmarks/user_bench/*. anthropic is needed for the LLM-judged benches
# (token usage, hallucination); chromadb + sentence-transformers are
# named comparison baselines for build/query speed; psutil gives us
# cross-platform peak-RSS measurement on Windows. `beir` transitively
# pulls sentence-transformers (and therefore torch); installing `[bench]`
# alone is enough for full BEIR runs without needing `[build]`
# separately.
bench = [
    "rank_bm25>=0.2",
    "beir>=2.0",
    "memory-profiler>=0.61",
    "anthropic>=0.25",
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
    "psutil>=5.9",
]
# Live filesystem watcher (rlat watch): debounced incremental refresh on
# every save. Adds watchdog for cross-platform FS event delivery (inotify
# / FSEvents / ReadDirectoryChangesW). watch re-encodes changed passages,
# so it pulls [build] transitively for the encoder.
watch = [
    "rlat[build]",
    "watchdog>=4.0",
]
# Dev tooling. Intentionally NOT in `all` — `all` is the user-facing convenience
# extra; dev tools are only for contributors.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.90",
    "ruff>=0.2",
    "pyright>=1.1.400",
]
# Convenience: full user-facing surface. Excludes [gpu] only — the
# onnxruntime/onnxruntime-gpu package clobber means [gpu] users must
# uninstall onnxruntime first (see [gpu] block).
all = ["rlat[build,optimise,bench,ann,watch]"]

[project.scripts]
rlat = "resonance_lattice.cli.app:main"

[project.urls]
Homepage = "https://github.com/tenfingerseddy/resonance-lattice"
Repository = "https://github.com/tenfingerseddy/resonance-lattice"

[tool.setuptools.packages.find]
where = ["src"]
include = ["resonance_lattice*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src/resonance_lattice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
